--- a/space-rangers-app/css/style.css
+++ b/space-rangers-app/css/style.css
@@ -21,7 +21,7 @@ h1, h2 {
 	margin: 150px auto;
 	box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
 } */
-.row>div {
+/* .row>div {
     margin: 3px;
     border: solid 3px black;
     display: inline-block;
@@ -33,7 +33,7 @@ h1, h2 {
     vertical-align: top;
     line-height: 100px;
     background-color: orange;
-}
+} */
 body {
     margin: 0 auto;
     text-align: center;
