--- a/space-rangers-app/css/style.css
+++ b/space-rangers-app/css/style.css
@@ -44,6 +44,23 @@ https://git.generalassemb.ly/seir-9-21/student-resources/tree/master/1_front_end
 	background-color: navy;
 	color: white;
 }
+.pirate {
+    display: flex;
+    flex-direction: column;
+    margin: 3px;
+    border: solid 3px black;
+    font-size: 35px;
+    width: 100px;
+    height: 100px;
+    text-align: center;
+    padding: 0px;
+    line-height: 100px;
+    background-color: orange;
+}
+.enemyFleet {
+    width: 300px;
+    height: 400px;
+}
 /* #help {
 	background-color: rgba(0,0,0,0.4);
 	position: fixed;
