--- a/space-rangers-app/css/style.css
+++ b/space-rangers-app/css/style.css
@@ -1,6 +1,7 @@
 h1, h2 {
     display: flex;
     justify-content: center;
+    
 }
 h1 {
     font-size: 50px;
@@ -84,7 +85,7 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/flex-flow */
     width: 300px;
     height: 400px;
 }
-#modal1,#intro {
+#modal1 {
 	background-color: rgba(0,0,0,0.4);
 	position: fixed;
 	top: 0;
@@ -96,7 +97,7 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/flex-flow */
 	overflow: auto;
 	/*If overflow is clipped, a scroll-bar should be added to see the rest of the content*/
 }
-#modal1text,#introtext {
+#modal1text {
     background-color: white;
     color: black;
 	height: 350px;
@@ -107,6 +108,18 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/flex-flow */
 	box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
 	/*This will give the box some depth.*/
 }
+#intro {
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	z-index: 1;
+	/*This puts our modal in front of the body (which has a default z-index setting of `0`*/
+	overflow: auto;
+	/*If overflow is clipped, a scroll-bar should be added to see the rest of the content*/
+}
+
 
 /* #help {
 	background-color: rgba(0,0,0,0.4);
