--- a/space-rangers-app/css/style.css
+++ b/space-rangers-app/css/style.css
@@ -104,9 +104,7 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/flex-flow */
 	width: 550px;
     border-radius: 2px;
     margin: 150px auto;
-	/*This will set the margins for the top and the bottom to 150px (or larger). The right and left will automatically set themselves (and keep the box centered horizontally).*/
 	box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
-	/*This will give the box some depth.*/
 }
 #intro {
 	position: fixed;
@@ -115,9 +113,11 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/flex-flow */
 	height: 100%;
 	width: 100%;
 	z-index: 1;
-	/*This puts our modal in front of the body (which has a default z-index setting of `0`*/
 	overflow: auto;
-	/*If overflow is clipped, a scroll-bar should be added to see the rest of the content*/
+}
+.fleebattle {
+    display: inline-block;
+    position: relative;
 }
 
 
